--- a/assets/style.css
+++ b/assets/style.css
@@ -91,7 +91,7 @@ body {
 }
 
 #gallery {
-	/*	min-height: 100vh; */
+	min-height: 100vh;
 }
 .title{
 	text-align: center;
@@ -101,10 +101,14 @@ body {
 	justify-content: center;
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-	color: #fff;
-	background-color: darkorange;
+	color: #000;
+	background-color: gold;
 	border-radius:0 ;
 }
+.nav-pills .nav-link:hover {
+	cursor: pointer;
+  }
+  
 .nav-pills .nav-link {
 	color: #000;
 
@@ -120,13 +124,17 @@ body {
 	padding-bottom: 100%;
 
 }
-.gallery-item {
+.gallery-item{
 	position: absolute;
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
 	padding: .5em;
 }
+.gallery-item img {
+	height: auto !important;
+  }
+  
 .mg-prev, .mg-next {
 	width: 30px;
 	height: 30px;
@@ -214,8 +222,8 @@ body {
 }
 .form-container {
 	flex : 2;
-
 }
+
 form {
 	display: flex;
 	flex-direction: column;
